updated url config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ name: CrazyChenz
 description: CrazyChenz Things
 
 # url is currently only used only for the RSS feed in feed.xml
-url: http://localhost:4000
+#url: http://localhost:4000
+url: http://crazychenz.github.io
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
